opa/ConstraintTemplate_nondefaultserviceaccount.yaml

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: nouseofdefaultserviceaccount
spec:
  crd:
    spec:
      names:
        kind: NoUseOfDefaultServiceAccount
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8siam

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          input.review.object.spec.serviceAccountName == "default"
          msg := "usage of the default service account is not allowed"
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not input.review.object.spec.serviceAccountName
          msg := "usage of the default service account is not allowed"
        }
