opa/ConstraintTemplate_norootcontainers.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: norootcontainers
spec:
  crd:
    spec:
      names:
        kind: NoRootContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package norootcontainers
        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container %v is running as root", [container.name])
        }
